--- a/_letter_posts/2021-01-20-try-think-more.html
+++ b/_letter_posts/2021-01-20-try-think-more.html
@@ -1,18 +1,18 @@
 ---
-title: "【长期更新】愿迷茫的你能找到一丝方向"
+title: "愿迷茫的你能找到一丝方向"
 sendTo: "亲爱的欧阳同学"
 wishes: "愿赤子之心与你共我！"
 sendFrom: "欧阳Boy_Petter"
 cssType: "letter-2"
 ---
-<pre>
+
     最近过得可好？
 
     近期，我发现了一个新的思维层次。
     看了一本《把时间当做朋友》的书，其中提到 “心智” 这个名词，作者用他的思维解释了心智是什么，但是我找到了新的思想瘾头。
 
     原文很长，我就不摘抄了；如果你忘记了，可以去翻阅。此时我提取了如下的想法：
-    <hr/>
+
     我自己不是我自己，你的大脑可以思考你的大脑。
     - [x轴] 自己可以分为：我知道的、我不知道的
     - [y轴] 别人可以分为：他知道我的、他不知道我的
@@ -21,7 +21,7 @@ cssType: "letter-2"
     - 每个人都有自己的心智，他们存储了自己的思维方式。
     - 心智会使人进入一个新的思考层次，但有时也会使人更固执，而无法进步。
     - 心智转型或进阶是思考自己的思考方式和方向，它的存在可以打破了一个巴掌拍不响的限制，是可以无限突破的领域。
-    <hr/>
+    
     记得第一次接触宗教思想的时候，是一本叫做《说禅论道》的书。
     里面谈论的道家的超脱自然、佛家的自省自觉、儒家的入世修身以及基督教的肉身成圣，这些新奇的自我思考的思路，让人倍感趣味。
     若按照这次的 “心智” 论，我其实算是进入了一个新的思考层次，因为接触很多新的思考方向，那段时间看待问题和现象也有了新的乐趣。
@@ -38,7 +38,6 @@ cssType: "letter-2"
 
     倘若，有人问我，你是谁？
     我是程序员？这是一种职业。
-    我是欧阳洁？这是我的名字。
     在家里，我是儿子？一种角色。
     我是有志青年？90后？一种自我标签化。
     我是网易最亮的仔？一种期望。
@@ -57,4 +56,3 @@ cssType: "letter-2"
     【强调】我不知道的是什么？去寻找它吧。
 
     睡觉吧，亲爱的！明天或许会有不同的想法呢。
-</pre>
