--- a/_letter_posts/2021-01-20-try-think-more.html
+++ b/_letter_posts/2021-01-20-try-think-more.html
@@ -3,7 +3,8 @@ title: "愿迷茫的你能找到一丝方向"
 sendTo: "亲爱的欧阳同学"
 wishes: "愿赤子之心与你共我！"
 sendFrom: "欧阳Boy_Petter"
-cssType: "letter-2"
+cssType: "letter-1"
+font: "MiniBlockLetters"
 ---
 
     最近过得可好？
