add life news and adjust load by scroll

--- a/reader/fall-index.html
+++ b/reader/fall-index.html
@@ -4,9 +4,12 @@ title: 读书手扎
 header: 读书手扎
 description: "这里展示了读书手扎."
 group: navigation
+label: "book"
 ---
 {% raw %}
 <br/>
+<script type="text/javascript" src="{{ site.baseurl }}/reader/static/js/jquery-1.10.1.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/reader/static/js/laytpl.js"></script>
 <div class="container">
     <div id="book-list" class="grid-line">
     </div>
