--- a/_letter_posts/2021-02-24-do-what-you-need-to-do.html
+++ b/_letter_posts/2021-02-24-do-what-you-need-to-do.html
@@ -25,7 +25,7 @@ font: "MiniBlockLetters"
     3、自然的规律并不是线性的，更趋向于对数。
      【韦伯定律】感觉的差别阈限随原来刺激量的变化而变化，而且表现为一定的规律性。
       刺激的增量(△I)和原来刺激值(I)的比是一个常数(K)，用公式表达即K=△I/I
-      物体越重越那一区分相同差别的物体哪个更重；
+      物体越重越难区分相同差别的物体哪个更重；
       年龄越大越觉得时间过的快；
       商人缓慢涨价或商品缓慢变小而不被察觉；
       犯人刑法时间长短评估基本都是按照对数计算…… 
@@ -44,4 +44,7 @@ font: "MiniBlockLetters"
       我不知这是否是以上问题的解决方案，但求能有个正确的方向。
       做你当下良知引导下需要做的事，而不是优先想做的事。
 
-    好了，差不多就这些了，希望你看到后能有新的见解。
+    好了，差不多就这些了。
+    每个人都要拥有自己的火焰，从别人（我也是别人）那里借来的是不完整的。
+    
+    希望你看到后能有新的见解。
