add password generator

--- a/other/index.html
+++ b/other/index.html
@@ -17,6 +17,9 @@ label: "other"
     <li class="active internal">
         <a label="QQ" href="{{ site.paths.qq_zone | relative_url }}">{{ site.data.i18n[site.lang].qq_zone }} - 青涩的空间记录</a>
     </li>
+    <li class="active internal">
+        <a label="pwgen" href="{{ site.paths.pwgen | relative_url }}">{{ site.data.i18n[site.lang].pwgen }} - 随机密码生成器</a>
+    </li>
     {% if site.live2dgirl %}
     <li class="active internal">
         <a title="召唤萌妹" class="btn-init-live2dgirl" href="#">萌妹 - 召唤本站虚拟助理</a>
