--- a/other/index.html
+++ b/other/index.html
@@ -12,13 +12,16 @@ label: "other"
         <a label="gist" href="{{ site.paths.gist | relative_url }}">{{ site.data.i18n[site.lang].gist }} - 一些代码片段</a>
     </li>
     <li class="active internal">
-        <a label="gist" href="{{ site.paths.board | relative_url }}">{{ site.data.i18n[site.lang].board }} - 临时任务管理工具</a>
+        <a label="board" href="{{ site.paths.board | relative_url }}">{{ site.data.i18n[site.lang].board }} - 临时任务管理工具</a>
     </li>
     <li class="active internal">
         <a label="QQ" href="{{ site.paths.qq_zone | relative_url }}">{{ site.data.i18n[site.lang].qq_zone }} - 青涩的空间记录</a>
     </li>
     <li class="active internal">
         <a label="pwgen" href="{{ site.paths.pwgen | relative_url }}">{{ site.data.i18n[site.lang].pwgen }} - 随机密码生成器</a>
+    </li>
+    <li class="active internal">
+        <a label="gitemoji" href="{{ site.paths.gitemoji | relative_url }}">{{ site.data.i18n[site.lang].gitemoji }} - 代码提交 - icon</a>
     </li>
     {% if site.live2dgirl %}
     <li class="active internal">
